# terraform-aws-s3-nix-lru-cache

./: .gitignore  README.md  buckets.tf  flake.nix  lambda.tf  main.tf  next-semver.nix  outputs.tf  schedule.tf  variables.tf  versions.tf
.github/: dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml  git-health.yaml
nix/: treefmt.nix
py/: main.py  package.nix  pyproject.toml
