[project]
name = "s3-nix-lru-cache"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "types-aiobotocore-s3>=3.6.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "types-aioboto3[s3]>=13.2.0.post3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["main.py", "py.typed"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"]
